5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1590_1016.log
== SUBMITION (2019-03-31 15:32:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("a"))
b = int(input("b"))
c = int(input("c"))
A = int(input(math.sqrt(s(s - a)(s - b)(s - c))))
print(round("A"))
-- EXECUTION TIME:
0.176646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = math.sqrt(s * (s - a)(s - b)(s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.159518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:42:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = math.sqrt(s * (s - a)(s - b)(s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.155251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = sqrt(s * (s - a)(s - b)(s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.201497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = sqrt(s * (s - a)(s - b)(s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.111364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.174896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:43:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c)/2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.24673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.143795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round("A,5"))
-- EXECUTION TIME:
0.120415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(A,5))
-- EXECUTION TIME:
0.129911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:44:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
A = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(A,5))
-- EXECUTION TIME:
0.188868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(A,5))
-- EXECUTION TIME:
0.223934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.160403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.190251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:45:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("a")
b = input("b")
c = input("c")
s = ( a + b + c) / 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.128798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    s = ( a + b + c) / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:47:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = round(input("a"),1)
b = round(input("b"),1)
c = round(input("c"),1)
s = ( a + b + c) / 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.155876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    a = round(input(),1)
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:49:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("a"))
b = int(input("b"))
c = int(input("c"))
s = ( a + b + c) / 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.189849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:49:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("a"))
b = int(input("b"))
c = int(input("c"))
s = ( a + b + c) // 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.156202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:50:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("a"))
b = int(input("b"))
c = int(input("c"))
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.143211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:53:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.129105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:55:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
if a<=0 or b<=0 or c<=0
quit()
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.199752
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    if a<=0 or b<=0 or c<=0
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:00:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
if a<=0 or b<=0 or c<=0 :
  quit()
if a>=b+c or b>=c+a or c>=a+b :
	quit()
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.17064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 12, in <module>
    Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:01:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
if a<=0 or b<=0 or c<=0 :
  quit()
if a>=b+c or b>=c+a or c>=a+b :
  quit()
s = ( a + b + c) / 2
Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.164739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 12, in <module>
    Area = math.sqrt(s * (s - a) * (s - b) * (s - c))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:47:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
s = ( a + b + c) / 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.193344
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:47:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
s = ( a + b + c) / 2
Area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(Area,5))
-- EXECUTION TIME:
0.149206
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
